add_executable(${MBEDCRYPTO_EXAMPLES_PREFIX_}aescrypt2 aescrypt2.c)
target_link_libraries(${MBEDCRYPTO_EXAMPLES_PREFIX_}aescrypt2 ${MBEDCRYPTO_TARGET})
SET_TARGET_PROPERTIES(${MBEDCRYPTO_EXAMPLES_PREFIX_}aescrypt2 PROPERTIES FOLDER ${MBEDCRYPTO_FOLDER_PREFIX}/Examples/aes)

add_executable(${MBEDCRYPTO_EXAMPLES_PREFIX_}crypt_and_hash crypt_and_hash.c)
target_link_libraries(${MBEDCRYPTO_EXAMPLES_PREFIX_}crypt_and_hash ${MBEDCRYPTO_TARGET})
SET_TARGET_PROPERTIES(${MBEDCRYPTO_EXAMPLES_PREFIX_}crypt_and_hash PROPERTIES FOLDER ${MBEDCRYPTO_FOLDER_PREFIX}/Examples/aes)

IF(MBEDCRYPTO_ENABLE_INSTALL)
	install(TARGETS ${MBEDCRYPTO_EXAMPLES_PREFIX_}aescrypt2 ${MBEDCRYPTO_EXAMPLES_PREFIX_}crypt_and_hash
	        DESTINATION "bin"
	        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
ENDIF(MBEDCRYPTO_ENABLE_INSTALL)